# fast-maxsim

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
src/: lib.rs
