[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast-maxsim"
version = "0.2.0"
description = "Fast CPU implementation of MaxSim scoring"
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Benjamin Clavié"}, {name = "Mixedbread Team"}]
keywords = ["maxsim", "similarity", "ranking", "cpu", "simd", "performance"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/zhuwenxing/fast-maxsim"
"Bug Tracker" = "https://github.com/zhuwenxing/fast-maxsim/issues"
"Source" = "https://github.com/zhuwenxing/fast-maxsim"
"Original Project" = "https://github.com/mixedbread-ai/maxsim-cpu"

[tool.maturin]
features = ["pyo3/extension-module"]